--- a/pages/p8/954730.md
+++ b/pages/p8/954730.md
@@ -1,4 +1,4 @@
-### 北宋皇帝亲自出6道题 难倒无数才子(组图)
+### 小孩的相貌性格 父母基因谁决定？(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="宋徽宗绘《唐十八学士》局部" src="https://img2.secretchina.com/pic/2019/6-25/p2454151a458442205-ss.jpg"/>
+  <img alt="基因 遗传 智力 性格" src="https://img3.secretchina.com/pic/2020/5-12/p2688512a347012500-ss.jpg"/>
   <br>
-   宋徽宗是画家，是诗人，是书法家。图为宋徽宗绘《唐十八学士》局部。（图片来源：国立故宫博物院）
+   小孩的相貌性格，父母基因谁决定？（以下图片来源皆为Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,46 +29,53 @@
   </div>
  </div>
  <p>
-  对于
+  小孩的
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/宋徽宗" target="_blank">
-    宋徽宗
-   </span>
+   基因
   </strong>
-  ，他作为
-  <strong>
-   皇帝
-  </strong>
-  丢了江山，并非明君所为，这是他的失败。而如果作为一个普通人，他又是那么的迷人。
+  来自父母，但你知道父母的
+  <span href="https://zh.wikipedia.org/wiki/%E5%9F%BA%E5%9B%A0">
+   基因
+  </span>
+  对小孩的影响谁比较大吗？看完此文，或许会让你更了解基因对小孩的影响哦。当然笔者还是要把话说在前头，基因是先天的，但后天的环境及成长磨练才更重要的。所以就算刚出生就赢在起跑点，但后天不努力的话，这一点点的优势也会很快就丧失的。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  我们都知道，除却君王，他是画家，是诗人，是书法家，是运动员，甚至是一个完美的情人，父辈打下来的江山正值盛世，国泰民安，他倒也简单天真，顺势把全部的心思用在了自己热爱的事情上，
-  <span href="https://www.secretchina.com/news/gb/tag/赵佶" target="_blank">
-   赵佶
+  <strong>
+   身高是谁的
+   <span href="https://www.secretchina.com/news/gb/tag/遗传" target="_blank">
+    遗传
+   </span>
+   大：父母各占一半
+  </strong>
+ </p>
+ <p>
+  除去营养状况外，孩子的身高有70%的主动权掌握在父母的手里，父母的
+  <strong>
+   遗传
+  </strong>
+  是决定孩子身高的主要因素，因为决定身高的因素35%来自父亲，35%来自母亲。假若父母双方个头不高，那就要靠宝宝后天那30%的努力了。
+ </p>
+ <p>
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/智力" target="_blank">
+    智力
+   </span>
+   是谁的遗传大：妈妈
+  </strong>
+ </p>
+ <p>
+  智力有一定的遗传性，同时受到环境、营养、教育等后天因素的影响。据科学家评估，遗传对智力的影响约占50%～60%，就遗传而言，妈妈聪明，生下的孩子大多聪明，如果是个男孩子，就会更聪明。这其中的原因在于，人类与智力有关的基因主要集中在X
+  <span href="https://zh.wikipedia.org/wiki/%E6%9F%93%E8%89%B2%E4%BD%93">
+   染色体
   </span>
-  过的日子应该是所有艺术家梦想中的生活。那个时代，是洋溢着墨香和浓浓的文艺范儿的。
+  上。女性有2个X染色体，男性只有1个，所以妈妈的智力在遗传中就占有了更重要的位置。
  </p>
  <p>
-  宋徽宗最大的举措之一便是担任了“翰林图画院”院长，放着
-  <span href="https://www.secretchina.com/news/gb/tag/皇帝" target="_blank">
-   皇帝
-  </span>
-  不当，兢兢业业地当起美术教授，编写教材，亲自授课，培养美术人才。
- </p>
- <p>
-  为了把最优秀的人才吸收到画院，徽宗建立考试制度，正式纳入科举考试之中，称“绘画试”。分佛道、人物、山水、鸟兽、花竹、屋木六科，摘古人诗句作为考题，要求考生画出诗句的意境，构思巧妙，不落俗套，做到笔意俱全。
- </p>
- <p>
-  不仅如此，宋徽宗还亲自出考题，亲自主考，亲自批卷，专业素质、创新意识考查样样不落下，综合素质过硬才能被录取进入画院。
- </p>
- <p>
-  <strong>
-   考题一：野渡无人舟自横
-  </strong>
+  为证明此点，我们首先来复习下高中生物知识：男宝宝和女宝宝是怎样来的?
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -83,7 +90,7 @@
   </div>
  </center>
  <p>
-  此题取自唐朝诗人韦应物的《滁州西涧》。应试者大多画一空舟系于涧边，或者画一鹭鸶立于船上，或者画一鸟落在船杆……
+  男生是XY，X (卵)是来自母亲，Y(精子)是来自父亲。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -98,7 +105,7 @@
   </div>
  </center>
  <p>
-  受到赵佶赏识的却是这样一幅画面，一个卧于船头的船夫，寂寞失落，百无聊赖。作者意在说明此水无人过渡，连摆渡之人也无聊，打起瞌睡来。既突出无乘客，又突出无人“渡”，紧扣诗句。
+  女生是XX，X (卵)是来自母亲，X(精子)是来自父亲。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +120,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题二：踏花归去马蹄香
-  </strong>
+  所以生男生女都是先生的错，不要怪罪妈妈的肚皮不争气。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -129,83 +134,11 @@
    </center>
   </div>
  </center>
- <p>
-  这个题目也是独具匠心的。如何表现“踏花归来马蹄香”中的“香”？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  考生们抓耳挠腮，煞费苦心：“香”是抽象的，只能用鼻子闻到，不能用眼睛看到，怎么画出来？
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  有的画家绞尽了脑汁，在“踏花”二字上下功夫，画面上画了许许多多的花瓣儿，一个人骑着马在花瓣儿上行走，表现出游春的意思；有的画家煞费苦心在“马”字上下功夫，画面上的主体是一位跃马扬鞭的少年，在黄昏疾速归来；有的画家运思独苦，在“蹄”字上下功夫，在画面上画了一只大大的马蹄子，特别醒目。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  赵佶看了，都很不满意。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  只有一位画家独具匠心，他不是单纯着眼于诗句中的个别词，而是在全面体会诗句含义的基础上着重表现诗句末的“香”字。他的画面是：在一个夏天的落日近黄昏的时刻，一个游玩了一天的官人骑着马回归乡里，马儿疾驰，马蹄高举，几只蝴蝶追逐着马蹄蹁跹飞舞。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  这位考生当然这脱颖而出，以榜首的位置入选画院。
+ <p style="text-align:center">
+  <img alt="妈妈的智力在遗传中就占有了更重要的位置。" src="https://img3.secretchina.com/pic/2020/8-28/p2763852a577424345-ss.jpg"/>
+  <br>
+   妈妈的智力在遗传中占有更重要的位置。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -221,7 +154,7 @@
  </center>
  <p>
   <strong>
-   考题三：竹锁桥边卖酒家
+   重点来了：
   </strong>
  </p>
  <center>
@@ -237,7 +170,7 @@
   </div>
  </center>
  <p>
-  这是画院的著名试题之一。众多考生皆重于酒家，以小溪流水、野渡小桥、竹林清风等藉以衬托，皆不中赵佶之意。
+  男生是XY，所以男生的智商全部都是来自母亲的遗传，女生是XX，所以女生的智商是父亲跟母亲各有一半影响。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -252,7 +185,7 @@
   </div>
  </center>
  <p>
-  唯有一名叫李唐的画家，独辟蹊径，画了一泓溪水，小桥横卧，桥边则是一片竹林，唯有那郁郁葱葱的翠竹中，挂着一幅迎风招展的酒帘。
+  因为女生的智商是父亲母亲都有影响，所以会有中和的效应。所以女生智商的分布会呈现自然分布(normal distribution)，就是倒钟状，中间最多，两边较少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -267,7 +200,7 @@
   </div>
  </center>
  <p>
-  赵佶看后大悦，认为酒家藏在竹林中正符合“锁”字的意境，亲自圈点为第一名。
+  然后男生因为是完全只受一方影响，所以男生智商分布会呈现在偏向在两个极端。也就是说，男生天才比较多，但是同时，蠢材之中也是男生特别多。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -283,7 +216,7 @@
  </center>
  <p>
   <strong>
-   考题四：深山藏古寺
+   这个故事告诉我们什么?
   </strong>
  </p>
  <center>
@@ -299,7 +232,7 @@
   </div>
  </center>
  <p>
-  这个题目要画好并不容易，画中的古寺要“藏”起来，又要让人觉得它是存在的。
+  1、你要判断一个男生聪不聪明，看他妈妈就知道了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -314,7 +247,7 @@
   </div>
  </center>
  <p>
-  有的考生在山腰画座古庙，半遮半露，总算有“藏”的意思……
+  2、然后我们用机率来算：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -329,7 +262,7 @@
   </div>
  </center>
  <p>
-  有的在丛林深处画座古庙，有的只画出庙的一角或一段残垣断壁……
+  生男孩的机率= 1/2；生女孩的机率=1/2。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -344,7 +277,7 @@
   </div>
  </center>
  <p>
-  主考官一连看了很多幅，都不满意，有一幅画深深吸引了他，他再仔细端详了一番，便连连点头称赞，说：“好，好，这才是‘魁选’之作呀！”
+  生男孩的时候，母亲对于男孩智商的影响力 = 1
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -359,7 +292,25 @@
   </div>
  </center>
  <p>
-  那幅画好在哪里呢？那位高明的画家，根本没有画庙，画的是崇山峻岭之中一股清泉飞流而下，泉边有个老态龙钟的和尚，正一瓢一瓢地舀水。就这么一个挑水的和尚，就把“深山藏古寺”的题目表现得透彻极了，把“藏”字表现出来了。
+  生女孩的时候，母亲对于女孩智商的影响力 = 1/2
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="要判断一个男生聪不聪明，看他妈妈就知道了。" src="https://img3.secretchina.com/pic/2020/8-22/p2760262a706906481-ss.jpg"/>
+  <br>
+   要判断一个男生聪不聪明，看他妈妈就知道了。
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -374,7 +325,82 @@
   </div>
  </center>
  <p>
-  和尚挑水，当然是用来烧茶煮饭，洗衣浆衫，这就叫人想到附近一定有庙；和尚年迈，还得自己来挑水，可以想像到那庙是座破败的古庙了。庙一定是在深山中，画面上看不见，这就把“藏”字表现出来了。这幅画比起那些画庙的一角或庙的一段墙垣的，更切合“深山藏古寺”的题意。
+  所以说，如果你：
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  1、是男生，如果你觉得你很笨的话。你千万要娶一个聪明的女生来。这样你小孩翻盘的机率还有七成五，人生还是充满了希望。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2、是女生，如果你觉得你很笨的话，因为，你翻人家盘的机率有七成五……努力生个女娃吧。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  3、当你看到一个男生很聪明的时候，则，他父亲很聪明的机率是0% (应该说，就算他父亲很聪明，也对他是没有影响的)，可是他母亲很聪明的机率是100%。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  所以说，如果你在考虑要嫁给一个很聪明的男生的时候，你就要小心他妈妈，可能会是一个很会算计的婆婆。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  反之，当你看到一个男生很笨的时候，没错，他通常会很有钱，这是上帝的安排，上帝为了不让人类灭亡，所以他会让很笨的人很有钱，这样他才能娶到聪明的女生。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -390,7 +416,10 @@
  </center>
  <p>
   <strong>
-   考题五：嫩绿枝头红一点
+   <span href="https://www.secretchina.com/news/gb/tag/性格" target="_blank">
+    性格
+   </span>
+   是谁的遗传大：爸爸
   </strong>
  </p>
  <center>
@@ -406,7 +435,57 @@
   </div>
  </center>
  <p>
-  “嫩绿枝头红一点”，应该还算好表达，难就难在题目还有后半句“恼人春色不须多”。如何表现这种春色不须多的境界呢？
+  性格是父亲的遗传大。性格的形成固然有先天的成分，但主要是后影响。比较而言，爸爸的影响力会大过妈妈。其中，父爱的作用对女儿的影响更大。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  一位心理学家认为：“父亲在女儿的自尊感，身份感以及温柔个性的形成过程中，扮演着重要的角色。”另有一位专家提出，父亲能传授给女儿生活上的许多重要的教训和经验，使女儿的性格更加丰富多彩。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p style="text-align:center">
+  <img alt="性格是父亲的遗传大。" src="https://img3.secretchina.com/pic/2020/8-19/p2758064a961013177-ss.jpg"/>
+  <br>
+   性格是父亲的遗传大。
+  </br>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   相貌是谁的遗传大？
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -425,7 +504,7 @@
   </ins>
  </center>
  <p>
-  中规中矩的答案就是这样的，直接在绿叶上画了朵红花，或是一丛绿叶中露出朵红花。
+  肤色：总遵循“相乘后再平均”的自然法则，让人别无选择。若父母皮肤较黑，绝不会有白嫩肌肤的子女；若一方白一方黑，大部分会给子女一个“中性”肤色，也有更偏向一方的情况。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -440,7 +519,7 @@
   </div>
  </center>
  <p>
-  但有位画家画了绿树中里一个亭阁，一位仕女正倚栏而立，她娇艳的樱桃小口在一片绿的画面中显得明艳照人。便有一动人情思的感觉，把“一点红”的含意作了灵巧恰当的表现。不用说，这位画家凭借这一巧思脱颖而出。
+  眼形：孩子的眼形、大小遗传自父母，大眼睛相对小眼睛是显性遗传。父母有一人是大眼睛，生大眼睛孩子的可能就会大一些。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -455,9 +534,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   考题六：蝴蝶梦中家万里
-  </strong>
+  双眼皮：双眼皮是显性遗传，单眼皮与双眼皮的人生宝宝极有可能是双眼皮。但父母都是单眼皮，一般孩子也是单眼皮。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -472,7 +549,7 @@
   </div>
  </center>
  <p>
-  此题取自“蝴蝶梦中家万里，杜鹃枝上月三更”，寓意很深。诗句出现“蝴蝶”、“子规（杜鹃）”、“树枝”、“明月”，表达了游子孤眠异乡的空虚寥落心情。
+  眼球颜色：黑色等深色相对于浅色而言是显性遗传。也就是说，黑眼球和蓝眼球的人，所生的孩子不会是蓝眼球。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -487,7 +564,7 @@
   </div>
  </center>
  <p>
-  众考生皆不中意，唯一被选中的是王道亨的试卷。
+  睫毛：长睫毛也是显性遗传的。父母只要一人有长睫毛，孩子遗传长睫毛的可能性就非常大。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -502,37 +579,11 @@
   </div>
  </center>
  <p>
-  王道亨所绘的是苏武牧羊图，画面上苏武假寐，在异国的冰天雪地中，正在打瞌睡，睡梦中一定是千万里远的家乡：林木扶疏，双蝶追逐其间，上立子规，月正当空，木影在地。犹闻啼声。王道亨较好地把握了题目的含义，一举夺魁。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  以上，宋徽宗的考试方式叫“诗题取士”，这让画家们深刻领悟到了“没文化真可怕”这个道理。他们不能再死描死背地画画，而要去读书，从中锻练诗意的想像空间，以更高的层次理解绘画。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  但是，你别以为考进来就完事儿了，对于考进来的画家，还得按身份分为“士流”和“杂流”，不断培训不断考核，品德智力等全面发展，再分职称。
+  鼻子：一般来讲，鼻子大、高而鼻孔宽呈显性遗传。父母中一人是挺直的鼻梁，遗传给孩子的可能性就很大。鼻子的遗传
+  <span href="https://www.secretchina.com/news/gb/tag/基因" target="_blank">
+   基因
+  </span>
+  会一直持续到成年，小时候矮鼻子，成年还可能变成高鼻子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -547,9 +598,9 @@
   </div>
  </center>
  <p style="text-align:center">
-  <img alt="宋徽宗《蜡梅山禽图》" src="https://img2.secretchina.com/pic/2019/6-25/p2454171a579455601-ss.jpg"/>
+  <img alt="努力生活，创造自己的价值，那是超越基因的！" src="https://img3.secretchina.com/pic/2020/7-29/p2742972a144951247-ss.jpg"/>
   <br>
-   宋徽宗《蜡梅山禽图》是迄今最早一张，“诗、书、画”都是自己原创的作品。（图片来源：国立故宫博物院）
+   努力生活，创造自己的价值，那是超越基因的！
   </br>
  </p>
  <center>
@@ -565,11 +616,7 @@
   </div>
  </center>
  <p>
-  比如宋徽宗就曾经要求画院那帮画师，让他们连孔雀要飞起来的时候，先抬左脚还是右脚，这个都要搞清楚。在这样的格物精神下，出现很多写实的画。比如，宋徽宗的《山禽腊梅图》，这张画是迄今最早一张，“诗、书、画”都是自己原创的作品。直接影响了后来一说起传统
-  <span href="https://www.secretchina.com/news/gb/tag/中国画" target="_blank">
-   中国画
-  </span>
-  就必须是“诗、书、画”的三个经典元素。
+  耳朵：耳朵的形状是遗传的，大耳朵相对于小耳朵是显性遗传。父母双方只要一个人是大耳朵，那么孩子就极有可能也是一对大耳朵。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -584,11 +631,7 @@
   </div>
  </center>
  <p>
-  到了公元1126年，金兵攻破汴京，将徽、钦二帝押送北方，汴京被洗劫一空，
-  <span href="https://www.secretchina.com/news/gb/tag/北宋" target="_blank">
-   北宋
-  </span>
-  灭亡，史称“靖康之耻”。
+  下颚：是不容“商量”的显性遗传。父母任何一方有突出的大下巴，子女常毫无例外地长着酷似的下巴，“像”得有些离奇。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -603,7 +646,7 @@
   </div>
  </center>
  <p>
-  被囚禁期间，宋徽宗受尽精神折磨，写下了许多晦恨、哀怨，凄凉的诗句，“家山回首三千里，目断山南无雁飞”，这一句算是真正体会王道亨所绘苏武牧羊图的真正境界了。
+  肥胖：会使子女们有53%的机会成为大胖子，如果父母有一方肥胖，孩子肥胖的概率便下降到40%。这说明，胖与不胖，大约有一半可以由人为因素决定，因此，父母完全可以通过合理饮食、充分运动使自己体态匀称。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -618,7 +661,52 @@
   </div>
  </center>
  <p>
-  于个人，他堪称艺术家，对北宋及中国绘画发展，功不可没，谁也不能否认他在艺术的惊人成就与才华。于国家，昏庸无能，作为一国之主，身负重任，却不务正业。人们总是向往一种完全不同的人生，大风大浪羡慕安宁平静，平淡无奇追求矫情曲折，但事实总逃不过一句“无可奈何”，其实就是逃脱不了神安排的命运，李煜是，赵佶亦是如此。
+  秃头：造物主似乎偏袒女性，让秃头只传给男子。比如，父亲是秃头，遗传给儿子概率则有50%，就连母亲的父亲，也会将自己秃头的25%的概率留给外孙们。这种传男不传女的性别遗传倾向，让男士们无可奈何。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  青春痘：这个让少男少女耿耿于怀的容颜症，居然也与遗传有关。因为父母双方若患过青春痘，子女们的患病率将比无家庭史者高出20倍。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  腿型：酷似父母的那双脂肪堆积的腿，完全可以通过充分的锻炼而塑造为修长健壮的腿。倒是那双腿若因遗传而显得过长或太短时，就无法再塑，只有听任自然了。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  最后，外貌的改变或许有限，但生命中人自己能掌握的事中，许多是基因影响有限的。努力生活，创造自己的价值吧，那是超越基因的！
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -682,13 +770,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p6/926305.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/04/926305.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954730.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954730.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/954730.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/05/954730.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p6/926305.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/954730.md' width='0px' height='0px'/>
