同步于: 12月5日12时3分

--- a/pages/p2/954789.md
+++ b/pages/p2/954789.md
@@ -1,4 +1,4 @@
-### 17则古训赠当今(图)
+### 内蒙古再现“批量”落马 一日5厅官被查(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="" src="https://img3.secretchina.com/pic/2020/12-5/p2832191a118940350-ss.jpg"/>
   <br>
-   行舍其华，言去其辩。（看中国：手绘插画 志清）
+   王来明为其中一个受查的退休厅官。（图片来源：网络）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,59 +29,44 @@
   </div>
  </div>
  <p>
+  【看中国2020年12月5日讯】（看中国记者苗薇综合报导）12月4日傍晚，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
-    古训
+   <span href="https://www.secretchina.com/news/gb/tag/内蒙古" target="_blank">
+    内蒙古
    </span>
   </strong>
-  是先人
+  纪委监委连续公布了5名在任或退休官员被查，其中3人已退休，2人仕途与“煤”相关，引发了不少关注。这是近期内蒙古第3次批量“处理”
   <strong>
-   智慧
+   落马
   </strong>
-  的
-  <strong>
-   结晶
-  </strong>
-  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
+  厅官。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
+  综合多家媒体报导，昨日内蒙古自治区纪委一口气通报5名厅官落马的消息，这5名厅官分别是：
+  <span href="https://zh.wikipedia.org/wiki/%E5%86%85%E8%92%99%E5%8F%A4%E8%87%AA%E6%B2%BB%E5%8C%BA">
+   内蒙古
+  </span>
+  前国土资源厅党组书记、厅长白盾；内蒙古矿业（集团）有限责任公司党委副书记、总经理苏日勒；公安厅前党委副书记、副厅长王来明；政协文史资料委员会前主任邹万银；鄂尔多斯市政协副主席曹郅琛。
  </p>
  <p>
-  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
-  <br>
-   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
-  </br>
+  此次落马的5人中，白盾、
+  <span href="https://www.secretchina.com/news/gb/tag/王来明" target="_blank">
+   王来明
+  </span>
+  和邹万银已经退休，苏日勒格和曹郅琛则是在任上被查。
  </p>
  <p>
-  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
-  <br>
-   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
-  </br>
+  其中，现年68岁的白盾，河北怀安人，在内蒙古工作长达39年，已退休6年；现年67岁的邹万银，四川资中人，也在内蒙古长期任职，长达28年，曾在巴彦淖尔盟、内蒙古驻北京办事处任职9年，目前已退休4年多。
  </p>
  <p>
-  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
-  <br>
-   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
-  </br>
+  现年62岁的王来明，山西大同人，从1977年3月起参加工作就在内蒙古，长达43年。曾任呼和浩特市玉泉区检察院副检察长、党组书记、检察长、省检察院反渎职侵权局局长，2011年4月起，任省公安厅党委委员副厅长、副书记、省第十二届委员会常务委员。
  </p>
  <p>
-  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
-  <br>
-   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
-   <br>
-    <br>
-     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
-     <br>
-      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
-     </br>
-    </br>
-   </br>
-  </br>
+  现年61岁的曹郅琛，内蒙古东胜人，曾任内蒙古鄂托克旗巴音淖尔中心卫生院医生、杭锦旗医院副院长、杭锦旗副旗长、鄂尔多斯市工商联合会会长、鄂尔多斯市副市长、鄂尔多斯市红十字会会长、鄂尔多斯市政协副主席。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -96,9 +81,11 @@
   </div>
  </center>
  <p>
-  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
-  <br/>
-  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
+  这并非内蒙古官场首次同日有多官员
+  <span href="https://www.secretchina.com/news/gb/tag/落马" target="_blank">
+   落马
+  </span>
+  ，10月27日，内蒙古4名正厅级官员也是于同日落马。11月21日，宣布6名厅官被处分，其中3人被开除党籍和公职，两人被开除党籍，1人被开除公职。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -113,9 +100,7 @@
   </div>
  </center>
  <p>
-  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
-  <br/>
-  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
+  今年以来，内蒙古开始对涉煤腐败“倒查20年”，也牵涉到其他领域腐败窝案，近期内蒙古政法系统多名厅官先后落马。12月2日，最高检对内蒙古自治区政协原副主席马明决定逮捕。马明在今年11月16日被“双开”，中纪委通报指他“大肆卖官鬻爵”、“与不法商人大搞权钱交易，在案件办理、企业经营以及工程承揽等方面利用职务上的便利为他人谋取利益，并非法收受巨额财物”等。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,9 +115,7 @@
   </div>
  </center>
  <p>
-  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
-  <br/>
-  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+  大陆媒体起底这名副省级“大老虎”，狠批他是“警察队伍里的政客，政客队伍里的奸商”、“人前总是一身正气，人后却是一肚子男盗女娼”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -147,9 +130,7 @@
   </div>
  </center>
  <p>
-  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
-  <br/>
-  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+  报导还举例说，2017年，时任呼和浩特市交通管理支队支队长的王永清想从现职调到包头或者其他经济条件相对好的城市任局长。于是他花了700万请中间商送礼给马明，谁知道中间商这差价赚得也太大了，到最后马明只收了200万，给他调任兴安盟任行署副盟长及公安局局长。后来一查，差价500万给中间商、时任自治区公安厅副厅长赵云辉私藏了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -164,9 +145,7 @@
   </div>
  </center>
  <p>
-  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
-  <br/>
-  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+  2019年6月，内蒙古自治区公安厅副厅长赵云辉落马。今年9月16日，赵云辉被控涉嫌犯受贿罪、巨额财产来源不明罪、非法持有枪支罪受审。公诉机关指控，赵云辉受贿跨度长达17年，受贿共计1864余万元，有价值697余万元的财产不能说明来源；非法持有枪支。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -181,14 +160,7 @@
   </div>
  </center>
  <p>
-  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
-  <br/>
-  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
-  <br/>
-  <br/>
-  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
-  <br/>
-  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
+  2018年10月31日，内蒙古公安厅原党委委员、原副厅长孟建伟（正厅级）被查。今年7月，孟建伟犯受贿罪、巨额财产来源不明罪和非法持有枪支、弹药罪一审被判刑16年。孟建伟被指控受贿逾2000万元；另有2144.7917万元的财产不能说明来源；还非法持有猎枪四支、猎枪子弹955发。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -207,9 +179,7 @@
   </ins>
  </center>
  <p>
-  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
-  <br/>
-  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
+  值得一提的是，就在孟建伟被宣布落马的第二天，2018年11月1日凌晨，内蒙古公安厅副厅长、呼和浩特市副市长、市公安局长李志斌在公安局休息室内自缢身亡，时年51岁。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,9 +194,7 @@
   </div>
  </center>
  <p>
-  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
-  <br/>
-  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
+  经梳理发现，马明曾于2012年6月至2018年1月任内蒙古自治区副主席、公安厅党委书记、厅长。赵云辉2013年5月被提拔为内蒙古自治区公安厅副厅长；孟建伟2010年就开始担任公安厅副厅长，2015年调任自治区政协；李志斌2015年12月从赤峰市公安局长任上提拔为自治区公安厅副厅长。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -241,9 +209,7 @@
   </div>
  </center>
  <p>
-  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
-  <br/>
-  【今译】只知前进不知后退，是招取祸败的道途。
+  而上述四人均是王来明在自治区公安厅任副厅长期间的同事。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -258,9 +224,7 @@
   </div>
  </center>
  <p>
-  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
-  <br/>
-  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
+  近年来内蒙古政法系统大震荡，震心则是“大老虎”邢云。2018年10月25日，内蒙古自治区人大常委会原副主任邢云涉嫌严重违纪违法被查。他曾任内蒙古自治区党委常委、政法委书记。 去年12月邢云被判死缓，其敛财数额高达4.49亿元。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -275,9 +239,7 @@
   </div>
  </center>
  <p>
-  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
-  <br/>
-  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+  据不完全统计，邢云落马，波及到呼和浩特、通辽市、兴安盟、包头市、锡林郭勒盟、赤峰市等多地市的20多名政法系统官员被查。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -341,13 +303,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954789.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954789.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/954789.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/05/954789.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p2/954789.md' width='0px' height='0px'/>
