--- a/pages/p7/938210.md
+++ b/pages/p7/938210.md
@@ -1,4 +1,4 @@
-### 川普染疫 时局更诡异(图)
+### 17则古训赠当今(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="" src="https://img3.secretchina.com/pic/2020/10-2/p2787362a574461491-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align:center">
+  <img alt="行舍其华，言去其辩。（看中国：手绘插画 志清）" src="https://img2.secretchina.com/pic/2019/4-8/p2398774a771091283-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   美国总统川普（图片来源：Drew Angerer/Getty Images）
+   行舍其华，言去其辩。（看中国：手绘插画 志清）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,65 +21,67 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月4日讯】
-  <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-   川普
-  </span>
-  夫妇被证实染疫，这是今年以来最刺激的一件事。庚子年果然诡异，全世界乱了套，几乎两三日就有一个大件事，世界突然发足了力狂奔，随时出大事。
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/古训" target="_blank">
+    古训
+   </span>
+  </strong>
+  是先人
+  <strong>
+   智慧
+  </strong>
+  的
+  <strong>
+   结晶
+  </strong>
+  ，已在国人心中流淌千百年，其中蕴藏的智慧，应用在待人处世上，常有意想不到的效果，足以让人受用一生。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  美国人对疫症一直麻痹大意，虽然武汉爆发之初，川普就宣布对
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  游客封关，但除此之外没有任何措施，其他国家游客仍旧大摇大摆进入美国。尤其是欧洲人，欧洲各国与美国联系太紧密，对欧洲人封关影响太大，因此放松了警愓，引起美国大爆发。
+  古训今译，古训今鉴，读而思，思而行，行而达。下面收集了17句古训金言，望尔获益。
  </p>
  <p>
-  当然，美国人一直不相信口罩，又抗拒居家隔离和禁止群聚，因此种下恶果。
+  【古训1】刚直，则当忘身以为国，履正以无偏。（ 据《金史•王修传》）
+  <br>
+   【今译】刚直之人，就应当为国家舍死忘生，做事正直。而不偏听偏信。
+  </br>
  </p>
  <p>
-  但不管如何，一个国家的最高领导层，在疫症大流行时，没有理由不用最严密的措施来控制总统身边人的社交，严格筛选可能接触的人群，即使过份一点也是应该的。可惜美国人还是疏忽了，最终导致总统夫妇中招，不但影响国政，也使总统大选蒙上阴影。
+  【古训2】岂有为人，知过而不能改者乎!（据《元史•木华黎传》）
+  <br>
+   【今译】 难道有人知道做错了，还不能改正的吗?（知错而不改，能叫人吗？）
+  </br>
  </p>
  <p>
-  有论者对川普中招后，美国选举形势作出分析。笔者认为，美国是一个制度很完善的国家，他们有应对一切意外的经验，川普会在大选前受到最好的照顾，目前暂时还不用太担心。英国首相也曾中招，经过治疗脱险，以美国的医疗水平，目前死亡率很低，不至于有太严重的后果，只是免不了有更多不明朗的因素，只好走一步看一步。
+  【古训3】伎巧为丧国斧斤，珠玉为荡心醯毒。侈丽纤美，不可以不遏。志骄于业泰，体逸于时安。（据《新唐书•后妃传》(上)）
+  <br>
+   【今译】奸诈诡谲是丧亡国家的斧头，珍珠美玉是心志摇荡的毒酒。奢华纤巧之美，不可以不加阻止。志气骄惰，是由于事业的安泰；身体淫乐，是由于处境的安闲。
+  </br>
  </p>
  <p>
-  五毛小粉红和蓝丝们莫名兴奋奔走相告是正常现象。中共独裁体制下，
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
-  </span>
-  等一众中共高官，当然受到最严密的保护，习近平若中招，才是不可想像的事。但五毛小粉红们不要高兴得太早了，川普本来就因武汉肺炎非常恼火，自己再受此番折磨，对中共更恨之入骨。他若死不去，日后对中共会更疯狂报复，他若死去，美国人更不甘心，以后不管谁当总统，民意压力之下，美中关系都只会越来越恶劣。川普中招，中共承担后果，这也是必然的演化。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  副总统彭斯与国务卿蓬佩奥检测完都没事，川普可以继续领导政府，只是不能面对面开会而已，内事有彭斯解决，外事有蓬佩奥包揽，美国对
-  <span href="https://www.secretchina.com/news/gb/tag/中共" target="_blank">
-   中共
-  </span>
-  的对策已经朝野有共识，民意也很清楚集中，国策已定，只是执行的问题。基于这一点，如果五毛们认为中共好事来了，那未免太幼稚。
+  【古训4】任重道悠，利深祸速。（据《后汉书•皇后纪》上)
+  <br>
+   【今译】官职重大的人，任职的时间越长，求利越多，招祸越快。
+   <br>
+    <br>
+     【古训5】自古圣帝必以俭约为美，乱主必以奢侈贻患。（据《魏书•韩麒麟传》）
+     <br>
+      【今译】自古以来，圣明的帝王一定把俭朴当作好事；而昏庸的君主则一定因为奢侈，而种下祸患。
+     </br>
+    </br>
+   </br>
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -94,7 +96,9 @@
   </div>
  </center>
  <p>
-  近日美国众议院中国问题小组出台了一份长篇报告，报告全方位制定了美国的对华政策，都是长远的全局性的制裁中共的大政方针，包括增加国防预算3%至5% ，阻止中国军工产业获得所需支持，制定措施应对中共宣传机器，阻止中共影响联合国和世卫，支援民主斗士的数字安全，减少产业链对中国的依赖，审视中共对5G网络带来的风险，确保美国人的钱不支持中共的国营企业等等。
+  【古训6】自古以来，身居富贵，能知止足者，甚少。（据《旧唐书•李靖传》）
+  <br/>
+  【今译】自古以来，身居富贵而能知道适可而止的人，很少。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -109,7 +113,9 @@
   </div>
  </center>
  <p>
-  报告也建议将台北经济文化代表处更名为台湾代表处，与台湾展开贸易谈判，通过“台湾保证法”和“台湾主权象征法案”，提升两国官方来往，支持台湾在世卫和国际货币基金等机构的参与，不再阻止在官式场合展示台湾旗帜。
+  【古训7】行舍其华，言去其辩。（据《晋书•应贞传》）
+  <br/>
+  【今译】 行动应舍弃浮华（做事要诚实），言论要舍弃诡辩（说话要正直）。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -124,7 +130,65 @@
   </div>
  </center>
  <p>
-  报告也建议提升对涉港中共港府官员的制裁，提升对香港抗争人士的支援，提供更多人道援助。
+  【古训8】行道之人，德行文学为根株，正直刚毅为柯叶。有根无叶，或可俟时；有叶无根，膏雨所不能活也。至于孝慈、友悌、忠信、笃行，乃食之醯酱，可一日无哉?   （据《新唐书•柳公绰传》）
+  <br/>
+  【今译】遵行大道的人，以德行和文学为根株，以正直刚毅为枝叶。有根没有叶，尚且可以等待时日；有叶没有根，则肥沃的雨水也不能救活它。至于孝慈、友悌、忠信、诚实，犹如吃的酱醋，能够一天没有吗?
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训9】行正道，循礼义，敦友爱，尽公忠。（据《清史稿•太宗本纪》)
+  <br/>
+  【今译】按正确的道理、准则做事，遵循礼法、道义，忠诚地促成友爱，竭力为公事效忠。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训10】杀身成仁，虽死犹生。（据《明史•晋恭王朱桐传》）
+  <br/>
+  【今译】杀身成仁，即使是死了，也像活着一样受人尊敬。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  【古训11】名者，公器也。不可多取。（据《三国志•张温传》）
+  <br/>
+  【今译】名位，是天下人所共有的。不可以一个人贪心多取。
+  <br/>
+  <br/>
+  【古训12】危邦不入，乱邦不居。（据《晋书•张方传》）
+  <br/>
+  【今译】处于危险之中的国家，不要进入；处于动乱的国家，不要停留。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -143,7 +207,9 @@
   </ins>
  </center>
  <p>
-  这份报告的重要性不言而喻，因为涉及的都是政策方向，给政府对华政策提供更广泛的空间。美国的体制，参众两院定下的国策方向，政府只能遵从，不能违背，因为议院代表的是民意。议会态度明确，政府执行坚决，事情会一直往正方向走，不可能回头。
+  【古训13】兆始恶者有终殃，积不善者无余庆。（据《北史•崔宏传》）
+  <br/>
+  【今译】出现坏的征兆，最终必有灾祸；长期做坏事的人，不会有好的结局。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -158,7 +224,9 @@
   </div>
  </center>
  <p>
-  中共和五毛小粉红们，为川普夫妇染疫而欢欣鼓舞，正体现了中国政府与大陆爱国五毛们的愚昧和短视。问题不在于川普当不当总统，也不在于他会不会死，问题也不在于谁会接任，问题只在于美国的民意，以及代表了充份民意的两个议会。因为在美国，只有人民才是大老板，两院是大老板的亲信，总统只是大老板的跟班。跟班死了，老板健在，生意照做，换一个跟班就是。
+  【古训14】汝惟不矜，天下莫与汝争能；汝惟不伐，天下莫与汝争功。（据《隋书•李谔传》）
+  <br/>
+  【今译】只要你不自以为贤能，天下就没有与你竞争才能的人；只要你不自我夸耀，天下就没有与你争夺功劳的人。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -173,7 +241,9 @@
   </div>
  </center>
  <p>
-  当然，川普个性强横，他在与不在还是不一样的。他在，美国对中共会彻底翻脸，他染疫死了，或无法执行政务，全美国都会归咎于中共藉武汉病毒肆虐全球，这笔帐算起来会更狠，结果如何，不问可知。
+  【古训15】进不知退，取祸之道也！（据《新唐书•高智周传》）
+  <br/>
+  【今译】只知前进不知后退，是招取祸败的道途。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -188,7 +258,9 @@
   </div>
  </center>
  <p>
-  什么都可能是假的，民意才是真的，时局颇诡异，但方向很明确，一切都只是时间问题。未来几个月，还有很多好戏看。
+  【古训16】志骄则好生事，器小则无远图。（据《明史•太祖本纪》(三)）
+  <br/>
+  【今译】志气高傲，容易惹是生非；器量狭小，就不会有长远打算。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -202,7 +274,23 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
+ <p>
+  【古训17】声过其实，古人所不取。攻乎异端，为政之甚害。（据《晋书•张闿》）
+  <br/>
+  【今译】声誉超过本人的实际情况，这是古人所不赞成的。攻击不同的观点与学说，对治理国家，是有严重危害的！
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -221,7 +309,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -253,13 +341,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948106.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948106.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/948106.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/04/948106.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p7/938210.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/938210.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/948106.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p7/938210.md' width='0px' height='0px'/>
