同步于: 12月5日20时52分

--- a/pages/nf4514/n12597952.md
+++ b/pages/nf4514/n12597952.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新12.5】国会立法者将挑战选举人团" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/03/18554e85e71dceebc5851ccc843d26c6-600x400.jpg"/>
+<div><img alt="【大选更新12.5】当选议员支持川普法律战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/lauren-boebert-2-1200x800-600x400.jpg"/>
 <div class="caption">
- 国会众议员莫·布鲁克斯（Mo Brooks）所发起的挑战选举人团投票的计划，也获得了更多支持者。图为美国联邦众议院。 (Shutterstock)
+ 现已当选的劳伦·伯伯特（Lauren Boebert）于2020年10月10日在科罗拉多州科洛纳（Colona）举行的竞选集会上向支持者发表讲话。（JASON CONNOLLY/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
