--- a/pages/nsc412/n12597952.md
+++ b/pages/nsc412/n12597952.md
@@ -1,11 +1,11 @@
-### 【大选更新12.5】国会立法者将挑战选举人团
+### 【大选更新12.5】当选议员支持川普法律战
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
 
 
 
-<div><img alt="【大选更新12.5】当选众议员支持川普法律战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/lauren-boebert-2-1200x800-600x400.jpg"/>
+<div><img alt="【大选更新12.5】当选议员支持川普法律战" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/lauren-boebert-2-1200x800-600x400.jpg"/>
 <div class="caption">
  现已当选的劳伦·伯伯特（Lauren Boebert）于2020年10月10日在科罗拉多州科洛纳（Colona）举行的竞选集会上向支持者发表讲话。（JASON CONNOLLY/AFP via Getty Images）
 </div></div><hr/>
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月05日讯】（大纪元记者陈霆综合报导）共和党控制的亚利桑那州立法机构在周五要求，应对马里科帕县使用的Dominion投票系统软件进行独立审计。川普法律团队律师朱利安尼也透露，密歇根州法官将下令，对安特里姆县22台投票机进行取证审查。
+ 【大纪元2020年12月05日讯】（大纪元记者陈霆、李言综合报导）共和党控制的亚利桑那州立法机构在周五要求，应对马里科帕县使用的Dominion投票系统软件进行独立审计。川普法律团队律师朱利安尼也透露，密歇根州法官将下令，对安特里姆县22台投票机进行取证审查。
 </p>
 <p>
  事实上，在本次美国
@@ -50,6 +50,24 @@
 <h4>
  以下是美国大选情况的实时更新：
 </h4>
+<h3>
+ 当选众议员支持川普法律战：我们的民主取决于这一点
+</h3>
+<p>
+ 美国科罗拉多当选众议员劳伦·博伯特（Lauren Boebert）对《大纪元时报》表示，唐纳德·川普（特朗普）总统应继续努力，以确保总统大选的公正和自由。
+</p>
+<p>
+ “这是一场有争议的选举。我相信川普总统应该全力以赴，利用他作为美国总统所拥有的一切权力，确保我们有一个自由、公正的选举。”劳伦向英文《大纪元》“美国思想领袖”节目表示。
+</p>
+<p>
+ “我们需要研究这些指控，我们必须认真对待它们。我相信川普总统拥有这样做的一切合法权利，我鼓励他这样做。”“我们国家确实依赖于此；我们的民主取决于此；我们的共和国取决于这次选举。如果我们这次不解决这个问题，没有谁会再信任我们的选举系统。”
+</p>
+<p>
+ 尽管民主党总统候选人乔·拜登宣布大选获胜，但尚不清楚获胜者，因为在乔治亚州和密歇根州等诸关键战场州的选举结果存在争议，因此胜负尚不明确。
+</p>
+<p>
+ 川普、他的竞选团队及其他人士提出了一连串诉讼，挑战选举程序和规则，指控舞弊，并指出违规行为，例如在乔治亚州发现了数千张未计入的选票。以及一个最初说拜登获胜的县将大约6,000张选票从民主党人翻转给了川普。
+</p>
 <h3>
  诉讼遭驳回 川普团队将上诉内华达州最高院
 </h3>
@@ -252,6 +270,10 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 90px; top: 694.531px; width: 145px; height: 19px;">
+</div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 148px; top: 724px; opacity: 1;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
