--- a/pages/p5/954825.md
+++ b/pages/p5/954825.md
@@ -1,4 +1,4 @@
-### 可部分供货华为？台积电：不评论市场传闻
+### 原油宝惨赔案 中国银行被罚款5千万元
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,21 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年10月10日讯】中国大陆媒体报导台积电已获
+  【看中国2020年12月5日讯】
   <strong>
-   美国商务部
+   中国银行此前
   </strong>
-  许可，将可部分供货给
+  发生
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/华为" target="_blank">
-    华为
+   原油期货
+  </strong>
+  暴跌导致投资人惨赔的“
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/原油宝" target="_blank">
+    原油宝
    </span>
   </strong>
-  。对此，
-  <strong>
-   台积电
-  </strong>
-  表示，不评论毫无根据的市场传闻。
+  ”事件后，中国银保监会宣布，对中国银行罚款人民币5050万元。另外，4名涉事员工也分别遭开罚40到50万元不等。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -32,51 +32,40 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  中国媒体集微网引述知情人士说法指出，继超微、英特尔后，
-  <span href="https://www.secretchina.com/news/gb/tag/台积电" target="_blank">
-   台积电
+  据《中央社》引述《每日经济新闻》报导，
+  <span href="https://www.secretchina.com/news/gb/tag/中国银行" target="_blank">
+   中国银行
   </span>
-  已获美国商务部许可，将可以供应华为部分产品，但以成熟制程为主，手机单芯片（SoC）等先进制程产品仍不能出货。
+  保险监督管理委员会12月5日宣布，就“原油宝事件”对中国银行罚款5050万元（人民币，下同）。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  苹果新机iPhone12即将问世，加上这项消息激励，台积电ADR 9日表现续强，终场收涨1.12%、0.98美元，收88.78美元。
+  银保监指出，中国银行主要违规行为有4个方向，分别是产品管理不规范，如保证金相关合约条款不清晰；风险管理不审慎，如市场风险限额调整和超限操作不规范；内控管理不健全，如消费者权益保护屡职不足；销售管理不合规，如部分宣传销售文本内容存在夸大或片面宣传等。
  </p>
  <p>
-  不过，台积电回应，公司不评论毫无根据的市场传闻。
+  另外，银保监也对中国银行4名涉事员工处以罚款。其中有3名隶属于中国银行全球市场部，分别是总经理王卫东、前总经理甄梅及副总经理张晨，分别被开罚50万元。另一人则是中国银行资深交易员孙燕萍，被处罚款40万元。
  </p>
  <p>
-  在苹果（Apple）、联发科、超微（AMD）与辉达（NVIDA）等客户需求驱动下，台积电9月营收新台币1275.85亿元，再创历史新高纪录。
+  据报导，“原油宝”是中国银行推出的
+  <span href="https://www.secretchina.com/news/gb/tag/原油期货" target="_blank">
+   原油期货
+  </span>
+  理财产品，标的是西德州中级原油期货价格。然而今年4月下旬，受疫情影响，原油价格大跌，一度跌至负值。
  </p>
  <p>
-  台积电整体第3季营收3564.26亿元，季增14.71%，超越原订目标，同时改写单季业绩历史新高纪录。5G、高效能运算与物联网市场需求强劲，5纳米制程大量出货，是推升台积电第3季营运攀高的主要动能。
+  然而，中国银行方面却未预先平仓，导致投资人惨赔，不但赔光本金，还须支付银行保证金。此举引发争议后，由北京官方介入调查。
  </p>
- <p>
-  台积电将在15日召开第三季线上法说会，公布第三季获利及第四季营运展望。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -95,7 +84,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -127,13 +116,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948796.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948796.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/948796.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/10/948796.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954825.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954825.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954825.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/05/954825.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/948796.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/954825.md' width='0px' height='0px'/>
