--- a/pages/nsc412/n12597952.md
+++ b/pages/nsc412/n12597952.md
@@ -63,7 +63,16 @@
  “法治禁止我们这样做。”鲍尔斯援引亚利桑那州的法律——相关条款要求该州选举人为全州选举中获得最多选票的候选人投票。根据该州选举官员和州长道格·杜西（Doug Ducey）周一签署的认证结果，民主党人乔·拜登在该那州以10,457票击败川普。
 </p>
 <p>
- （未完）
+ 亚利桑那州一些共和党议员和川普法律团队成员称该州大选中存在舞弊行为，并敦促亚利桑那州立法机构任命自己的选举人。
+</p>
+<p>
+ “川普法律团队引用了1892年麦克弗森诉布莱克尔（McPherson v. Blacker）案，称立法机关可以随时‘恢复（任命选举人的）权力’。的确，亚利桑那州立法机关可以改变未来任命选举人的方式，但无法罢免选民已经投票选出的选举人。”鲍尔斯写道。
+</p>
+<p>
+ 他补充说：“美国宪法或美国最高法院的判决都没有表明，亚利桑那州立法机构可以追溯任命不同的选举人。”
+</p>
+<p>
+ 一直支持川普关于大选舞弊主张的州众议员凯利·汤森德（Kelly Townsend）回应了鲍尔斯的声明，质疑他对法律的解释，并呼吁对此事进行更深入的法律分析，以“确保该美好州的公民不会因渎职和不作为而被剥夺权利。”
 </p>
 <h3>
  川普前往乔州参加集会 为两位联邦参议员助选
