--- a/pages/nsc412/n12597952.md
+++ b/pages/nsc412/n12597952.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2020年12月05日讯】（大纪元记者陈霆、李言综合报导）共和党控制的亚利桑那州立法机构在周五要求，应对马里科帕县使用的Dominion投票系统软件进行独立审计。川普法律团队律师朱利安尼也透露，密歇根州法官将下令，对安特里姆县22台投票机进行取证审查。
+ 【大纪元2020年12月05日讯】（大纪元记者陈霆、李言、张婷综合报导）共和党控制的亚利桑那州立法机构在周五要求，应对马里科帕县使用的Dominion投票系统软件进行独立审计。川普法律团队律师朱利安尼也透露，密歇根州法官将下令，对安特里姆县22台投票机进行取证审查。
 </p>
 <p>
  事实上，在本次美国
@@ -51,6 +51,18 @@
  以下是美国大选情况的实时更新：
 </h4>
 <h3>
+ 鲍威尔：川普有充足时间推翻大选结果
+</h3>
+<p>
+ 美国德州知名律师西德尼·鲍威尔（Sidney Powell）周五（12月4日）接受Newsmax电视台“Stinchfield”节目采访时说，川普总统的法律团队有充足的时间来推翻2020年大选结果。
+</p>
+<p>
+ “对于（大选）舞弊案，12月8日的最后期限并不适用，”鲍威尔说。她指的是12月8日“安全港最后期限”。各州必须在12月8日之前选出选举人，解决有关选举和选举人的任何争议。
+</p>
+<p>
+ “我们至少有直到12月14日的时间，”她说，“我们可能会提起更多诉讼。”
+</p>
+<h3>
  加州认证选举结果
 </h3>
 <p>
@@ -69,7 +81,7 @@
  宾夕法尼亚州已经出现了这种情况。该州75名共和党议员在周五签署一份声明，敦促国会阻止对该州选举人团将票投给拜登。
 </p>
 <h3>
- 共和党要求延迟选举证书 明州最高法院驳回
+ 共和党要求延迟选举认证 明州最高法院驳回
 </h3>
 <p>
  明尼苏达州最高法院周五（12月4日）驳回一项诉讼。这份诉讼要求法官阻止该州认证11月3日选举结果。
